Svg icons default stroke and fill fix to display properly on dark mode

--- a/scss/ionicons.css
+++ b/scss/ionicons.css
@@ -17,7 +17,7 @@ i[class^='icon-'] {
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
+  line-height: 1.5;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
