--- a/scss/line-awesome/_larger.scss
+++ b/scss/line-awesome/_larger.scss
@@ -1,6 +1,6 @@
 .#{$la-css-prefix}.#{$la-css-prefix}-lg {
   font-size: 1.33333em;
-  line-height: 0.75em;
+  line-height: 1.2em;
   vertical-align: -.0667em;
 }
 
